# CIVION

./: .coverage  .env.example  .env.local.example  .gitignore  CHANGELOG.md  CIVION_UNIVERSAL_INSTALLATION_GUIDE.md  CIVION_V4_EXECUTIVE_SUMMARY.md  CIVION_V4_IMPROVEMENT_ROADMAP.md  CIVION_V4_PROFESSIONAL_REVIEW.md  CIVION_VERSIONS_COMPARISON.md  CONTRIBUTING.md  Dockerfile  INSTALLATION_SUMMARY.txt  LICENSE  MANIFEST.in  QUICK_START.md  README.md  README.txt  civion_logo.py  create_favicon.py  docker-compose.yml  goal_list.txt  install.bat  install.py  install.sh  main.py  package-lock.json  package.json  print_statements.txt  pyproject.toml  pytest.ini  requirements.txt  test_civion_complete.py  tsconfig.json  tsconfig.tsbuildinfo  verify_civion.sh
.github/workflows/: ci.yml  publish.yml  test.yml
backend/: package.json
backend/src/: server.ts
civion/: __init__.py
civion.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
civion/agents/: __init__.py  base_agent.py  cyber_threat.py  cyber_threat_agent.py  github_agent.py  github_trend_agent.py  market_agent.py  market_signal.py  market_signal_agent.py  memory_agent.py  research_agent.py  research_monitor_agent.py  research_radar.py  sentiment_agent.py  startup_radar.py  startup_radar_agent.py  trend_agent.py
civion/api/: __init__.py  server.py  websocket.py
civion/api/routes/: __init__.py  agents.py  assistant.py  events.py  goals.py  insights.py  marketplace.py  memory.py  network.py  nick.py  personas.py  predictions.py  reasoning.py  signals.py  system.py  vault.py
civion/api/static/: style.css
civion/api/templates/: dashboard.html
civion/cli/: __init__.py  main.py  setup_wizard.py
civion/config/: settings.py  settings.yaml
civion/core/: __init__.py  config.py  constants.py  logger.py
civion/engine/: __init__.py  agent_controller.py  agent_engine.py  agent_loader.py  collaboration_engine.py  confidence_tracker.py  event_engine.py  event_stream.py  goal_planner.py  network_engine.py  persona_system.py  planner_engine.py  prediction_engine.py  reasoning_loop.py  sandbox.py  scheduler.py  signal_engine.py
civion/models/: __init__.py  confidence.py  global_event.py  goal.py  persona.py  prediction.py  signal.py  task.py
civion/services/: __init__.py  api_key_manager.py  api_service.py  assistant_context.py  builder_service.py  cache_service.py  data_service.py  file_service.py  insights_service.py  internet_access.py  llm_service.py  logging_service.py  memory_graph.py  memory_service.py  provider_registry.py
civion/services/providers/: __init__.py  anthropic_provider.py  azure_provider.py  base_provider.py  bedrock_provider.py  cohere_provider.py  gemini_provider.py  groq_provider.py  huggingface_provider.py  mistral_provider.py  ollama_provider.py  openai_provider.py  perplexity_provider.py  together_provider.py
civion/static/: __init__.py
civion/static/ui/: 404 2.html  404.html  agents.html  agents.txt  guide.html  guide.txt  index 2.txt  index.html  index.txt  network.html  network.txt  onboarding.html  onboarding.txt  personas.html  personas.txt  predictions.html  predictions.txt  reasoning.html  reasoning.txt  settings.html  settings.txt  signals.html  signals.txt  vault.html  vault.txt
civion/storage/: __init__.py  database.py
civion/tools/: __init__.py  arxiv_tool.py  base_tool.py  coingecko_tool.py  filesystem_tool.py  github_tool.py  hackernews_tool.py  news_tool.py  tool_manager.py  web_search_tool.py
civion/utils/: __init__.py  exceptions.py  helpers.py  mock_data.py
data/: civion.db
frontend/: .env.local.example  package.json  pnpm-lock.yaml
frontend/src/agents/: advanced-agent.ts  execution-agent.ts  personal-agent.ts
frontend/src/app/: page.tsx
frontend/src/components/: AgentMarketplace.tsx  TransparentThinkingViewer.tsx
frontend/src/hooks/: useSystemState.ts
frontend/src/services/: api.ts  storage.ts
frontend/src/store/: agentStore.ts  userStore.ts
scripts/: build_frontend.sh  release.sh
src/agents/: advanced-analysis-agent.ts  advanced-debate-engine.ts  advanced-execution-agent.ts  advanced-goal-agent.ts  advanced-monitoring-agent.ts  advanced-research-agent.ts  research-agent.ts
src/agents/v2/: execution-agent-v2.ts  research-agent-v2.ts  smart-agent.ts
src/app/: StoreHydrator.tsx
src/app/dashboard/: page.tsx
src/app/settings/: page.tsx
src/components/: AdvancedAgentDebate.tsx
src/db/: v2-schema.sql
src/lib/: db.ts  firebase-admin.ts  hash.ts  jwt.ts  middleware.ts  utils.ts
src/store/: agentStore.ts
tests/: conftest.py  test_agent_controller.py  test_agents.py  test_all_fixes.py  test_goals.py  test_websocket.py
tests/integration/: test_api.py  test_network_sharing.py  test_reasoning_pipeline.py  test_system_routes.py  test_v2_api.py  test_v2_cli.py  test_websocket_flow.py
tests/unit/: test_agent_controller.py  test_agents.py  test_collaboration.py  test_confidence_tracker.py  test_database.py  test_engine.py  test_events.py  test_memory_graph.py  test_persona_system.py  test_prediction_engine.py  test_reasoning_loop.py  test_reasoning_loop_v2.py  test_sandbox.py  test_scheduler.py  test_services.py  test_signal_engine.py  test_websocket.py
ui/: .env.local.example  jest.config.js  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
(+274 files in other folders)
