[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "civion"
version = "0.3.0"
description = "CIVION — Local AI Agent Operating System"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Baljot Chohan"},
]
keywords = ["ai", "agents", "llm", "local", "dashboard", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "typer>=0.9.0",
    "httpx>=0.25.0",
    "aiosqlite>=0.19.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "openai>=1.3.0",
    "google-generativeai>=0.3.0",
    "rich>=13.0.0",
    "apscheduler>=3.10.0",
]

[project.scripts]
civion = "civion.cli.main:main"

[project.urls]
Homepage = "https://github.com/baljotchohan/civion"
Repository = "https://github.com/baljotchohan/civion"
Issues = "https://github.com/baljotchohan/civion/issues"

[tool.setuptools.packages.find]
include = ["civion*"]

[tool.setuptools.package-data]
"civion.config" = ["*.yaml"]
"civion.api.templates" = ["*.html"]
"civion.api.static" = ["*.css"]
