[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "civion"
version = "2.0.0"
description = "CIVION - AI Intelligence Command Center"
readme = "docs/README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "CIVION Team"}]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "aiosqlite>=0.19.0",
    "httpx>=0.25.0",
    "websockets>=12.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "apscheduler>=3.10.4",
    "cryptography>=41.0.0",
    "feedparser>=6.0.0",
    "beautifulsoup4>=4.12.0",
    "python-dateutil>=2.8.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
civion = "civion.cli.main:app"

[tool.setuptools.packages.find]
include = ["civion*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
