[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "civion"
version = "2.0.0"
description = "CIVION — Personal AI Intelligence System. Install: pipx install civion"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "CIVION Team"}]
keywords = ["ai", "intelligence", "agents", "llm", "monitoring"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"

dependencies = [
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
  "pydantic>=2.5.0",
  "pydantic-settings>=2.1.0",
  "python-dotenv>=1.0.0",
  "aiohttp>=3.9.0",
  "aiosqlite>=0.19.0",
  "httpx>=0.25.0",
  "websockets>=12.0",
  "typer>=0.9.0",
  "rich>=13.7.0",
  "apscheduler>=3.10.4",
  "cryptography>=41.0.0",
  "feedparser>=6.0.0",
  "beautifulsoup4>=4.12.0",
  "python-dateutil>=2.8.0",
  "python-multipart>=0.0.6",
  "click>=8.1.0",
  "requests>=2.31.0",
  "aiofiles>=23.2.1",
]

[project.optional-dependencies]
anthropic  = ["anthropic>=0.20.0"]
openai     = ["openai>=1.10.0"]
gemini     = ["google-generativeai>=0.4.0"]
mistral    = ["mistralai>=0.4.0"]
groq       = ["groq>=0.4.0"]
cohere     = ["cohere>=5.0.0"]
together   = ["together>=1.0.0"]
ollama     = ["ollama>=0.1.0"]
bedrock    = ["boto3>=1.34.0"]
huggingface = ["huggingface-hub>=0.20.0"]
all-providers = [
  "anthropic>=0.20.0",
  "openai>=1.10.0",
  "google-generativeai>=0.4.0",
  "mistralai>=0.4.0",
  "groq>=0.4.0",
  "cohere>=5.0.0",
]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=4.1.0",
  "black>=23.0.0",
  "ruff>=0.1.0",
]

[project.scripts]
civion = "civion.cli.main:app"

[project.urls]
Homepage = "https://openclaw.ai"
Repository = "https://github.com/civion/civion"
Documentation = "https://docs.openclaw.ai"
"Bug Tracker" = "https://github.com/civion/civion/issues"
"Install Guide" = "https://github.com/baljotchohan/CIVION#installation"

[tool.setuptools.packages.find]
include = ["civion*"]

[tool.setuptools.package-data]
civion = [
  "static/**/*",
  "static/ui/**/*",
  "static/ui/*",
  "static/ui/_next/**/*",
  "static/ui/_next/static/**/*",
  "static/ui/_next/static/chunks/**/*",
  "static/ui/_next/static/css/**/*",
  "py.typed",
]

[tool.setuptools]
include-package-data = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
